11 Dec 2004 mipsator
 * added detection of 'id' and 'sudo' in pmksetup, idea from Sean Chittenden.

06 Dec 2004 mipsator
 * added detection of 'ls' and 'echo' in pmksetup.

27 Nov 2004 mipsator
 * added cpu features for x86 architecture.

# snapshot 0.8.1-s9

27 Nov 2004 mipsator
 * incorporated x86 cpu detection code into pmksetup, enjoy !
 * miscellaneous cosmetics changes.

26 Nov 2004 mipsator
 * made cpuid_test using compat.
 * done major clean-up in tests directory (but still need some work).
 * fixed a bug in x86_get_cpuid_data() that was remaining from before
   x86_cpu_cell structure changes.

25 Nov 2004 mipsator
 * added missing code that translate arch name into id.
 * improved architecture detection code.

24 Nov 2004 mipsator
 * x86 cpu detection engine is complete, need more data now.

21 Nov 2004 mipsator
 * improved tests/Makefile to preprocess assembly files by default.
 * added detection of cc,cpp and as in pmkcfg.sh.
 * added generation of tests/Makefile from a template.
 * improved Makefile to preprocess assembly files by default.

17 Nov 2004 mipsator
 * modified x86 cpu detection stuff to use less assembly.

05 Nov 2004 mipsator
 * improved cpu arch detection in pmksetup.
 * added some x86 cpu detection stuff used by tests/cpuid_test.

01 Nov 2004 mipsator
 * misc changes before cpu detection.

27 Oct 2004 mipsator
 * added 'as' (assembler) detection in pmksetup.

25 Oct 2004 mipsator
 * fixed pmkcfg.sh on IRIX.

18 Oct 2004 mipsator
 * improved pmkcfg.sh to try to detect posix shells before using /bin/sh
   (this fix the Tru64 and SunOS lack of default posix shell problem).

11 Oct 2004 mipsator
 * imported experimental cpu family detection.

# snapshot 0.8.1-s8

26 Sep 2004 mipsator
 * updated pmkfile.5 to sync with latest changes.
 * updated README and INSTALL to warn about non POSIX compliant shells.

26 Sep 2004 mipsator
 * improved CHECK_LIB to handle more than one function. 

24 Sep 2004 mipsator