@@ -220,6 +220,8 @@ Arguments:
 .It Dv LANG
 .It Dv NAME
 type is 'quoted', name of the header.
+.It Dv MACRO
+type is 'list', list of one or more compiler macros to check, optional.
 .It Dv FUNCTION
 type is 'quoted' or 'list', name or list of functions to check, optional.
 .It Dv CFLAGS
